@@ -20,7 +20,9 @@ import org.openstreetmap.josm.testutils.annotations.FullPreferences;
 @FullPreferences
 class HistoryComboBoxTest {
     static Stream<Arguments> testNonRegression21203() {
-        return Stream.of(Arguments.of("Hello world"), Arguments.of(new AutoCompletionItem("Hello world2")), Arguments.of(new Double(42)));
+        return Stream.of(Arguments.of("Hello world"),
+                Arguments.of(new AutoCompletionItem("Hello world2")),
+                Arguments.of(Double.valueOf(42)));
     }
 
     /**
